--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server/server.js" },
-    { "src": "/(.*)", "dest": "/client/dist/index.html" }
+    { "src": "^/api/(.*)", "dest": "/server/server.js" },
+    { "handle": "filesystem" },
+    { "src": ".*", "dest": "/client/dist/index.html" }
   ]
 }
